--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,8 +14,8 @@
 
     <div class="search-container">
         <div class="search">
-            <input type="zip-code-input" type="text" placeholder="Enter zip">
-            <i class="fas fa-search"></i>
+            <input id="zip-code-input" type="text" placeholder="Enter zip">
+            <i class="fas fa-search" onclick="searchStores()"></i>
         </div>
     </div>
     <div class="stores-list-container">
